Initial web page.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,76 @@
 <title>PAKLaunch</title>
 </header>
 <body>
-Hello World!
+<p>
+Since GitHub does not link to organizations by default, I threw together this 
+pageas an alternative.  Styling is not my thing. If pressed, I can borrow 
+enough web foo to make something that looks okay, such as the 
+<a href="http://nexusformat.org">NeXus launch page</a>, but don't expect it 
+for this site.
+</p>
+
+<h2>Projects</a>
+<dl>
+<dt><a href="https://github.com/reflectometry">Reflectometry GitHub</a></dt>
+<dd>Most of my work over the past decade has been in reflectometry
+analysis, which allows users to reconstruct the depth profile of a sample
+from the measured reflection.  These projects are hosted on
+<a href="http://reflectometry.org/danse/software.html">reflectometry.org</a>
+but developed on GitHub.
+</dd>
+
+<dt><a href="https://github.com/bumps">Bumps GitHub</a></dt>
+<dd>For uncertainty analysis in modeling and inverse problems, Bayesian analysis
+using Markov Chain Monte Carlo is an effective black box procedure.  Define
+your cost function as a probability distribution and MCMC can pull a sample
+from the multidimensional probability density function which you can use to
+get information about confidence intervals and parameter correlations.  The
+Bumps package was developed to provide fitting and uncertainty analysis for
+Refl1D, but has since been used for fitting problems in other domains such as
+triple axis spectometry.  We plan to make this an independent package during
+the summer of 2012, with easy installation from pypi.
+</dd>
+
+<dt><a href="https://github.com/scattering/dataflow">Dataflow GitHub</a></dt>
+<dd>For some many kinds of science the raw data needs to be transformed
+through multiple steps and combined with other information to bring it
+to a state where it can be modelled.  We are developing a package which
+allows us to do this on the web.  We are using a visual programming model
+which allows us to wire together the transformations.  My contributions to 
+this so far have been to the backend infrastructure, and helping summer 
+students produce the front end.  Dataflow is live at 
+<a href="http://drneutron.org/">drneutron.org</a>.
+</dd>
+
+<dt><a href="https://github.com/pkienzle/periodictable">Periodic table</a></dt>
+<dd>There are many large data sets associated with nuclei and ions in the
+periodic table.  No one application needs all of them, but they can all
+share the basic infrastructure.  The periodic table package is a 
+periodic table written in python which allows third party extensions which
+add attributes to the element, isotope or ion to be independently managed 
+and installed.  It includes a chemical formula calculator, but stops short
+of structural representations of molecules.
+</dd>
+
+<dt><a href="http://octave.sourceforge.net/">Octave-forge</a></dt>
+<dd>I made major contributions to the octave-forge project, gathering
+contributions from the community and my own code into a set of independently
+installed third party packages for Octave.  I have not been active in
+this community for a number of years.
+</dd>
+
+<dt><a href="https://github.com/pkienzle">Personal projects</a></dt>
+<dd>Being personal these will be of minimal interest to third parties.
+<a href="http://github.com/pkienzle/pkienzle.github.com">These web pages</a> 
+are hosted here, as well as 
+<a href="http://github.com/pkienzle/pyplay>recent experiments with python</a>.
+</dd>
+
+<h2>Publications</h2>
+<p>
+Recent publications are listed on the
+<a href="http://reflectometry.org/danse/publications.html">DANSE publications</a>
+page.
+</p>
 </body>
 </html>
