don't forget to close tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ enough web foo to make something that looks okay, such as the
 for this site.
 </p>
 
-<h2>Projects</a>
+<h2>Projects</h2>
 <dl>
 <dt><a href="https://github.com/reflectometry">Reflectometry GitHub</a></dt>
 <dd>Most of my work over the past decade has been in reflectometry
