--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ for this site.
 
 <h2>Projects</h2>
 <dl>
-<dt><a href="https://github.com/reflectometry">Reflectometry GitHub</a></dt>
+<dt><a href="https://github.com/reflectometry">Reflectometry</a></dt>
 <dd>Most of my work over the past decade has been in reflectometry
 analysis, which allows users to reconstruct the depth profile of a sample
 from the measured reflection.  These projects are hosted on
@@ -21,7 +21,7 @@ from the measured reflection.  These projects are hosted on
 but developed on GitHub.
 </dd>
 
-<dt><a href="https://github.com/bumps">Bumps GitHub</a></dt>
+<dt><a href="https://github.com/bumps">Bumps</a></dt>
 <dd>For uncertainty analysis in modeling and inverse problems, Bayesian analysis
 using Markov Chain Monte Carlo is an effective black box procedure.  Define
 your cost function as a probability distribution and MCMC can pull a sample
@@ -33,7 +33,7 @@ triple axis spectometry.  We plan to make this an independent package during
 the summer of 2012, with easy installation from pypi.
 </dd>
 
-<dt><a href="https://github.com/scattering/dataflow">Dataflow GitHub</a></dt>
+<dt><a href="https://github.com/scattering/dataflow">Dataflow</a></dt>
 <dd>For some many kinds of science the raw data needs to be transformed
 through multiple steps and combined with other information to bring it
 to a state where it can be modelled.  We are developing a package which
