don't forget to close tags and quotes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ this community for a number of years.
 <dd>Being personal these will be of minimal interest to third parties.
 <a href="http://github.com/pkienzle/pkienzle.github.com">These web pages</a> 
 are hosted here, as well as 
-<a href="http://github.com/pkienzle/pyplay>recent experiments with python</a>.
+<a href="http://github.com/pkienzle/pyplay">recent experiments with python</a>.
 </dd>
 </dl>
 
