Slightly less stilted language

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ this community for a number of years.
 </dd>
 
 <dt><a href="https://github.com/pkienzle">Personal projects</a></dt>
-<dd>Being personal these will be of minimal interest to third parties.
-<a href="http://github.com/pkienzle/pkienzle.github.com">These web pages</a> 
+<dd>Being personal these will be of minimal interest to you, dear reader.
+<a href="http://github.com/pkienzle/pkienzle.github.com">This web pages</a> 
 are hosted here, as well as 
 <a href="http://github.com/pkienzle/pyplay">recent experiments with python</a>.
 </dd>
