--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ this community for a number of years.
 
 <dt><a href="https://github.com/pkienzle">Personal projects</a></dt>
 <dd>Being personal these will be of minimal interest to you, dear reader.
-<a href="http://github.com/pkienzle/pkienzle.github.com">This web pages</a> 
-are hosted here, as well as 
+My github <a href="http://github.com/pkienzle/pkienzle.github.com">personal webpage</a> 
+(this page) is hosted here, as well as 
 <a href="http://github.com/pkienzle/pyplay">recent experiments with python</a>.
 </dd>
 </dl>
