--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <header>
-<title>PAKLaunch</title>
+<title>Paul Kienzle portfolio</title>
 </header>
 <body>
 <p>
@@ -10,10 +10,26 @@ Public project portfolio for Paul Kienzle
 <h2>Projects</h2>
 <dl>
 
+<dt><a href="https://github.com/bumps/bumps">Bumps</a></dt>
+<dd>For uncertainty analysis in modeling and inverse problems, Bayesian analysis
+using Markov Chain Monte Carlo is an effective black box procedure.  Define
+your cost function as a probability distribution and MCMC can pull a sample
+from the multidimensional probability density function which you can use to
+get information about confidence intervals and parameter correlations.  The
+Bumps package was developed to provide fitting and uncertainty analysis for
+Refl1D, but has since been used for fitting problems in other domains such as
+triple axis spectometry.
+</dd>
+
+<dt><a href="https://github.com/reflectometry/refl1d">Reflectometry</a></dt>
+<dd>Much of my work at NIST has been in reflectometry
+analysis, which allows users to reconstruct the depth profile of a sample
+from the measured reflection.
+</dd>
+
 <dt><a href="https://github.com/sasview">SasView<a/></dt>
-<dd>Over the past two years I have been active in the SasView project,
-primarily creating a plugin architecture for small angle scattering
-models written in C to be run on OpenCL enabled computers.  We are trying
+<dd>Contributor to the SasView project, primarily creating small angle scattering
+models written in C to be run on CUDA and OpenCL enabled computers.  We try
 to maximize performance on commodity hardware while preserving accuracy.
 In addition to tuning the code, this sometimes requires numerical analysis
 to improve the accuracy, allowing the models to be computed with single
@@ -23,37 +39,6 @@ to work around the idiosyncracies in the compilers and libraries
 provided by the different hardware vendors.
 </dd>
 
-<dt><a href="https://github.com/bumps/bumps">Bumps</a></dt>
-<dd>For uncertainty analysis in modeling and inverse problems, Bayesian analysis
-using Markov Chain Monte Carlo is an effective black box procedure.  Define
-your cost function as a probability distribution and MCMC can pull a sample
-from the multidimensional probability density function which you can use to
-get information about confidence intervals and parameter correlations.  The
-Bumps package was developed to provide fitting and uncertainty analysis for
-Refl1D, but has since been used for fitting problems in other domains such as
-triple axis spectometry.  We plan to make this an independent package during
-the summer of 2012, with easy installation from pypi.
-</dd>
-
-<dt><a href="https://github.com/reflectometry/reduction">Dataflow</a></dt>
-<dd>For some many kinds of science the raw data needs to be transformed
-through multiple steps and combined with other information to bring it
-to a state where it can be modelled.  We developed a package which
-allows us to do this on the web.  We are using a visual programming model
-which allows us to wire together the transformations.  My contributions to 
-this has primarily been to the backend infrastructure.
-students produce the front end.  Dataflow is live at
-<a href="http://h3.umd.edu/reflweb">ReflWeb</a>.  A manuscript is in preparation.
-</dd>
-
-<dt><a href="https://github.com/reflectometry/refl1d">Reflectometry</a></dt>
-<dd>Much of my work at NIST has been in reflectometry
-analysis, which allows users to reconstruct the depth profile of a sample
-from the measured reflection.  These projects are hosted on
-<a href="http://reflectometry.org/danse/software.html">reflectometry.org</a>
-but developed on GitHub.
-</dd>
-
 <dt><a href="https://github.com/pkienzle/periodictable">Periodic table</a></dt>
 <dd>There are many large data sets associated with nuclei and ions in the
 periodic table.  No one application needs all of them, but they can all
@@ -61,21 +46,40 @@ share the basic infrastructure.  The periodic table package is a
 periodic table written in python which allows third party extensions which
 add attributes to the element, isotope or ion to be independently managed 
 and installed.  It includes a chemical formula calculator, but stops short
-of structural representations of molecules.
+of structural representations of molecules. This is the engine behind
+the SLD and neutron activation web page (below).
 </dd>
 
-<dt><a href="http://octave.sourceforge.net/">Octave-forge</a></dt>
-<dd>I made major contributions to the octave-forge project, gathering
+<dt><a href="https://github.com/scattering/activation">SLD and neutron activation</a></dt>
+<dd>This is a web service for evaluating  This is the computation engine
+behind the scattering length density and neutron activation calculator
+at <a href="https://www.ncnr.nist.gov/resources/activation/">https://www.ncnr.nist.gov/resources/activation/</a>.
+The research reactor at Munich also uses periodtable for their <a href="https://webapps.frm2.tum.de/activation/">activation</a> and
+<a href="https://webapps.frm2.tum.de/neutroncalc/">scattering</a> calculators.
+</dd>
+
+<dt><a href="https://github.com/reductus">Reductus</a></dt>
+<dd>For some many kinds of science the raw data needs to be transformed
+through multiple steps and combined with other information to bring it
+to a state where it can be modelled.  We developed a package which
+allows us to do this on the web.  We are using a visual programming model
+which allows us to wire together the transformations.  My contributions to 
+this has primarily been to the backend infrastructure.  Reductus is live at
+<a href="https://reductus.nist.gov/">https://reductus.nist.gov</a>.
+</dd>
+
+<dt><a href="https://sourceforge.net/projects/octave/">Octave-forge</a></dt>
+<dd>I made major contributions to the early octave-forge project, gathering
 contributions from the community and my own code into a set of independently
 installed third party packages for Octave.  I have not been active in
-this community for a number of years.
+this community since 2005, but code lives on, for example in the signal toolbox
+and the testfun unit testing framework in GNU Octave.
 </dd>
 
 <dt><a href="https://github.com/pkienzle">Personal projects</a></dt>
 <dd>Being personal these will be of minimal interest to you, dear reader.
-My github <a href="http://github.com/pkienzle/pkienzle.github.com">personal webpage</a> 
-(this page) is hosted here, as well as 
-<a href="http://github.com/pkienzle/pyplay">recent experiments with python</a>.
+This page is hosted here, as well as my early
+<a href="http://github.com/pkienzle/pyplay">experiments with python</a>.
 </dd>
 </dl>
 
