link to readthedocs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Public project portfolio for Paul Kienzle
 <h2>Projects</h2>
 <dl>
 
-<dt><a href="https://github.com/bumps/bumps">Bumps</a></dt>
+<dt><a href="https://github.com/bumps/bumps">Bumps</a> (<a href="https://bumps.readthedocs.io/en/latest/index.html">docs</a>)</dt>
 <dd>For uncertainty analysis in modeling and inverse problems, Bayesian analysis
 using Markov Chain Monte Carlo is an effective black box procedure.  Define
 your cost function as a probability distribution and MCMC can pull a sample
@@ -21,7 +21,7 @@ Refl1D, but has since been used for fitting problems in other domains such as
 triple axis spectometry.
 </dd>
 
-<dt><a href="https://github.com/reflectometry/refl1d">Reflectometry</a></dt>
+<dt><a href="https://github.com/reflectometry/refl1d">Reflectometry</a> (<a href="https://refl1d.readthedocs.io/en/latest/index.html">docs</a>)</dt>
 <dd>Much of my work at NIST has been in reflectometry
 analysis, which allows users to reconstruct the depth profile of a sample
 from the measured reflection.
@@ -39,7 +39,7 @@ to work around the idiosyncracies in the compilers and libraries
 provided by the different hardware vendors.
 </dd>
 
-<dt><a href="https://github.com/pkienzle/periodictable">Periodic table</a></dt>
+<dt><a href="https://github.com/pkienzle/periodictable">Periodic table</a> (<a href="https://periodictable.readthedocs.io/en/latest/index.html">docs</a>)</dt>
 <dd>There are many large data sets associated with nuclei and ions in the
 periodic table.  No one application needs all of them, but they can all
 share the basic infrastructure.  The periodic table package is a 
@@ -50,12 +50,13 @@ of structural representations of molecules. This is the engine behind
 the SLD and neutron activation web page (below).
 </dd>
 
-<dt><a href="https://github.com/scattering/activation">SLD and neutron activation</a></dt>
+<dt><a href="https://github.com/scattering/activation">SLD and neutron activation</a> (<a href="https://www.ncnr.nist.gov/resources/activation/">app</a>)</dt>
 <dd>This is a web service for evaluating  This is the computation engine
-behind the scattering length density and neutron activation calculator
-at <a href="https://www.ncnr.nist.gov/resources/activation/">https://www.ncnr.nist.gov/resources/activation/</a>.
-The research reactor at Munich also uses periodtable for their <a href="https://webapps.frm2.tum.de/activation/">activation</a> and
-<a href="https://webapps.frm2.tum.de/neutroncalc/">scattering</a> calculators.
+behind the NIST scattering length density and neutron activation calculator.
+The research reactor at Munich has a separate 
+<a href="https://webapps.frm2.tum.de/activation/">activation</a> and
+<a href="https://webapps.frm2.tum.de/neutroncalc/">scattering</a>
+interface, also based on periodictable.
 </dd>
 
 <dt><a href="https://github.com/reductus">Reductus</a></dt>
