link to readthedocs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Public project portfolio for Paul Kienzle
 <h2>Projects</h2>
 <dl>
 
-<dt><a href="https://github.com/bumps/bumps">Bumps</a> (<a href="https://bumps.readthedocs.io/en/latest/index.html">docs</a>)</dt>
+<dt>Bumps (<a href="https://github.com/bumps/bumps">source</a>, <a href="https://bumps.readthedocs.io/en/latest/index.html">docs</a>)</dt>
 <dd>For uncertainty analysis in modeling and inverse problems, Bayesian analysis
 using Markov Chain Monte Carlo is an effective black box procedure.  Define
 your cost function as a probability distribution and MCMC can pull a sample
@@ -21,13 +21,13 @@ Refl1D, but has since been used for fitting problems in other domains such as
 triple axis spectometry.
 </dd>
 
-<dt><a href="https://github.com/reflectometry/refl1d">Reflectometry</a> (<a href="https://refl1d.readthedocs.io/en/latest/index.html">docs</a>)</dt>
+<dt>Refl1D (<a href="https://github.com/reflectometry/refl1d">source</a>, <a href="https://refl1d.readthedocs.io/en/latest/index.html">docs</a>)</dt>
 <dd>Much of my work at NIST has been in reflectometry
 analysis, which allows users to reconstruct the depth profile of a sample
 from the measured reflection.
 </dd>
 
-<dt><a href="https://github.com/sasview">SasView<a/></dt>
+<dt>SasView (<a href="https://github.com/sasview">source<a/>)</dt>
 <dd>Contributor to the SasView project, primarily creating small angle scattering
 models written in C to be run on CUDA and OpenCL enabled computers.  We try
 to maximize performance on commodity hardware while preserving accuracy.
@@ -39,7 +39,7 @@ to work around the idiosyncracies in the compilers and libraries
 provided by the different hardware vendors.
 </dd>
 
-<dt><a href="https://github.com/pkienzle/periodictable">Periodic table</a> (<a href="https://periodictable.readthedocs.io/en/latest/index.html">docs</a>)</dt>
+<dt>Periodic Table (<a href="https://github.com/pkienzle/periodictable">source</a>, <a href="https://periodictable.readthedocs.io/en/latest/index.html">docs</a>)</dt>
 <dd>There are many large data sets associated with nuclei and ions in the
 periodic table.  No one application needs all of them, but they can all
 share the basic infrastructure.  The periodic table package is a 
@@ -50,7 +50,7 @@ of structural representations of molecules. This is the engine behind
 the SLD and neutron activation web page (below).
 </dd>
 
-<dt><a href="https://github.com/scattering/activation">SLD and neutron activation</a> (<a href="https://www.ncnr.nist.gov/resources/activation/">app</a>)</dt>
+<dt>Neutron calculator (<a href="https://github.com/scattering/activation">source</a>, <a href="https://www.ncnr.nist.gov/resources/activation/">app</a>)</dt>
 <dd>This is a web service for evaluating  This is the computation engine
 behind the NIST scattering length density and neutron activation calculator.
 The research reactor at Munich has a separate 
@@ -59,17 +59,16 @@ The research reactor at Munich has a separate
 interface, also based on periodictable.
 </dd>
 
-<dt><a href="https://github.com/reductus">Reductus</a></dt>
+<dt>Reductus (<a href="https://github.com/reductus">source</a>, <a href="https://reductus.nist.gov/">app</a>)</dt>
 <dd>For some many kinds of science the raw data needs to be transformed
 through multiple steps and combined with other information to bring it
 to a state where it can be modelled.  We developed a package which
 allows us to do this on the web.  We are using a visual programming model
 which allows us to wire together the transformations.  My contributions to 
-this has primarily been to the backend infrastructure.  Reductus is live at
-<a href="https://reductus.nist.gov/">https://reductus.nist.gov</a>.
+this has primarily been to the backend infrastructure.
 </dd>
 
-<dt><a href="https://sourceforge.net/projects/octave/">Octave-forge</a></dt>
+<dt>Octave-forge (<a href="https://sourceforge.net/projects/octave/">source</a>(</dt>
 <dd>I made major contributions to the early octave-forge project, gathering
 contributions from the community and my own code into a set of independently
 installed third party packages for Octave.  I have not been active in
