link to readthedocs

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ which allows us to wire together the transformations.  My contributions to
 this has primarily been to the backend infrastructure.
 </dd>
 
-<dt>Octave-forge (<a href="https://sourceforge.net/projects/octave/">source</a>(</dt>
+<dt>Octave-forge (<a href="https://sourceforge.net/projects/octave/">source</a>)</dt>
 <dd>I made major contributions to the early octave-forge project, gathering
 contributions from the community and my own code into a set of independently
 installed third party packages for Octave.  I have not been active in
