link to readthedocs

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ this community since 2005, but code lives on, for example in the signal toolbox
 and the testfun unit testing framework in GNU Octave.
 </dd>
 
-<dt><a href="https://github.com/pkienzle">Personal projects</a></dt>
+<dt>Personal projects (<a href="https://github.com/pkienzle">source</a>)</dt>
 <dd>Being personal these will be of minimal interest to you, dear reader.
 This page is hosted here, as well as my early
 <a href="http://github.com/pkienzle/pyplay">experiments with python</a>.
