add infer reference

--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@ which allows us to wire together the transformations.  My contributions to
 this has primarily been to the backend infrastructure.
 </dd>
 
+<dt>Darkfield calculator (<a href="https://github.com/usnistgov/correlogram_tools">source</a>)</dt>
+<dd>A tool for estimating the darkfield intensity for a neutron interferometer.
+This is part of the the NIST 
+<a href="https://www.nist.gov/programs-projects/interferometry-infer-neutron-interferometric-microscopy-small-forces-and">INFER</a>
+project. Using a dark-light fringe pattern you can estimate the transmission through
+a sample as well as its small angle scattering by looking at the reduction
+of amplitude and visibility of the fringes.
+</dd>
+
 <dt>Octave-forge (<a href="https://sourceforge.net/projects/octave/">source</a>)</dt>
 <dd>I made major contributions to the early octave-forge project, gathering
 contributions from the community and my own code into a set of independently
